--- a/photoshare/photoshare/PhotoGalleryViewController.xib
+++ b/photoshare/photoshare/PhotoGalleryViewController.xib
@@ -25,6 +25,9 @@
                     <state key="normal" title="Delete Photos">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
+                    <connections>
+                        <action selector="deletePhoto:" destination="-1" eventType="touchUpInside" id="Bji-Kz-a62"/>
+                    </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vdz-P4-fXc">
                     <rect key="frame" x="5" y="409" width="100" height="30"/>
@@ -33,6 +36,9 @@
                     <state key="normal" title="Add Photos">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
+                    <connections>
+                        <action selector="addPhoto:" destination="-1" eventType="touchUpInside" id="VJ5-Hl-6fZ"/>
+                    </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PCF-J7-j1f">
                     <rect key="frame" x="215" y="409" width="100" height="30"/>
@@ -41,6 +47,9 @@
                     <state key="normal" title="Share">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
+                    <connections>
+                        <action selector="sharePhoto:" destination="-1" eventType="touchUpInside" id="diB-2g-xra"/>
+                    </connections>
                 </button>
                 <collectionView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" pagingEnabled="YES" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="cfs-wx-kRA">
                     <rect key="frame" x="0.0" y="40" width="320" height="330"/>
