--- a/photoshare/photoshare/HomeViewController.xib
+++ b/photoshare/photoshare/HomeViewController.xib
@@ -7,7 +7,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HomeViewController">
             <connections>
-                <outlet property="communityCountLbl" destination="7vd-3R-lmQ" id="PbD-8M-X30"/>
+                <outlet property="photoCountLbl" destination="7vd-3R-lmQ" id="WLT-PJ-Y8d"/>
                 <outlet property="profilePicImgView" destination="vfq-9i-S36" id="oGV-Vi-Acs"/>
                 <outlet property="view" destination="1" id="3"/>
                 <outlet property="welcomeName" destination="ZVS-N4-mqx" id="vAg-kP-iJG"/>
@@ -93,7 +93,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="aEd-2f-6CB">
-                            <rect key="frame" x="233" y="63.000001609921391" width="71" height="100"/>
+                            <rect key="frame" x="233" y="63" width="71" height="100"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES"/>
                             <state key="normal">
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
